--- a/data/tabular/sr_p53_tox21/meta.yaml
+++ b/data/tabular/sr_p53_tox21/meta.yaml
@@ -19,6 +19,7 @@ targets:
           - adjective: toxic in the SR-p53 assay
           - adjective: toxic in the SR-p53 response assay
           - adjective: toxic in the p53 response assay
+          - gerund: toxic activity in the SR-p53 assay
       uris:
 benchmarks:
     - name: TDC
@@ -50,3 +51,86 @@ bibtex:
       title = {Editorial: Tox21 Challenge to Build Predictive Models of Nuclear Receptor
       and Stress Response Pathways As Mediated by Exposure to Environmental Toxicants and Drugs},
       journal = {Frontiers in Environmental Science}
+templates:
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__gerund}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {toxicity_SR-p53#no &NULL}{toxicity_SR-p53__names__noun} {#properties|characteristics|features!}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {toxicity_SR-p53#not &NULL}identified as {toxicity_SR-p53__names__adjective}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {toxicity_SR-p53__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional|extra!} words.
+      Result: {toxicity_SR-p53#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {toxicity_SR-p53__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result: This molecule is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {toxicity_SR-p53__names__adjective}.
+      Result: {SMILES#}
+    - |-
+      User: Can you {#tell me|figure out|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {toxicity_SR-p53__names__adjective}?
+      Assistant: {toxicity_SR-p53#No&Yes}, this molecule is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
+    - |-
+      User: Is the molecule with the {SMILES__description} {SMILES#} {toxicity_SR-p53__names__adjective}?
+      Assistant: {toxicity_SR-p53#No&Yes}, it is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}?
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}?
+      Assistant: This is a molecule that is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: This sounds {#very exciting. |very interesting. | very curious. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule should {toxicity_SR-p53#not &NULL}be {toxicity_SR-p53__names__adjective}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule should {toxicity_SR-p53#not &NULL}be {toxicity_SR-p53__names__adjective}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} {toxicity_SR-p53__names__adjective}:<EOI> {toxicity_SR-p53#yes&no}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {toxicity_SR-p53__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result:<EOI> {toxicity_SR-p53#False&True}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {toxicity_SR-p53__names__adjective}.
+      Result:<EOI> {SMILES#}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {toxicity_SR-p53__names__adjective}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {toxicity_SR-p53%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {toxicity_SR-p53__names__adjective}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {toxicity_SR-p53%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%toxicity_SR-p53%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%toxicity_SR-p53%}
+      Answer:<EOI> {%multiple_choice_result}
