--- a/data/tabular/skin_reaction/meta.yaml
+++ b/data/tabular/skin_reaction/meta.yaml
@@ -15,9 +15,9 @@ targets:
           - noun: skin sensitization
           - noun: agent induced skin reaction
           - noun: drug induced skin immune reaction
-          - verb: cause a skin reaction
-          - verb: cause a skin sensitization
-          - verb: cause a drug induced skin immune reaction
+          - verb: causes a skin reaction
+          - verb: causes a skin sensitization
+          - verb: causes a drug induced skin immune reaction
           - gerund: causing a skin reaction
       uris:
           - http://purl.bioontology.org/ontology/MEDDRA/10040914
@@ -67,77 +67,77 @@ templates:
     - The {#molecule |!}{SMILES__description} {SMILES#} does {skin_reaction#not &NULL}{skin_reaction__names__verb}.
     - |-
       Task: Please classify a molecule based on the description.
-      Description: A molecule that is {skin_reaction__names__adjective}.
+      Description: A molecule that is {skin_reaction__names__gerund}.
       {#Molecule |!}{SMILES__description}: {SMILES#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result: {skin_reaction#False&True}
     - |-
       Task: Please classify a molecule based on the description.
-      Description: A molecule that is {skin_reaction__names__adjective}.
+      Description: A molecule that is {skin_reaction__names__gerund}.
       {#Molecule |!}{SMILES__description}: {SMILES#}
       Constraint: Answer the question in a {#full|complete|definite!} sentence.
-      Result: This molecule is {skin_reaction#not &NULL}{skin_reaction__names__adjective}.
+      Result: This molecule is {skin_reaction#not &NULL}{skin_reaction__names__gerund}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that is {skin_reaction__names__adjective}.
+      Description: A molecule that is {skin_reaction__names__gerund}.
       Result: {SMILES#}
     - |-
-      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {skin_reaction__names__adjective}?
-      Assistant: {skin_reaction#No&Yes}, this molecule is {skin_reaction#not &NULL}{skin_reaction__names__adjective}.
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {skin_reaction__names__gerund}?
+      Assistant: {skin_reaction#No&Yes}, this molecule is {skin_reaction#not &NULL}{skin_reaction__names__gerund}.
     - |-
-      User: Is the molecule with the {SMILES__description} {SMILES#} {skin_reaction__names__adjective}?
-      Assistant: {skin_reaction#No&Yes}, it is {skin_reaction#not &NULL}{skin_reaction__names__adjective}.
+      User: Is the molecule with the {SMILES__description} {SMILES#} {skin_reaction__names__gerund}?
+      Assistant: {skin_reaction#No&Yes}, it is {skin_reaction#not &NULL}{skin_reaction__names__gerund}.
     - |-
-      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {skin_reaction#not &NULL}{skin_reaction__names__adjective}?
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {skin_reaction#not &NULL}{skin_reaction__names__gerund}?
       Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
     - |-
-      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {skin_reaction#not &NULL}{skin_reaction__names__adjective}?
-      Assistant: This is a molecule that is {skin_reaction#not &NULL}{skin_reaction__names__adjective}: {SMILES#}
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {skin_reaction#not &NULL}{skin_reaction__names__gerund}?
+      Assistant: This is a molecule that is {skin_reaction#not &NULL}{skin_reaction__names__gerund}: {SMILES#}
     - |-
       User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
-      User: Yes, please. The molecule should {skin_reaction#not &NULL}be {skin_reaction__names__adjective}.
-      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {skin_reaction#not &NULL}{skin_reaction__names__adjective}: {SMILES#}
+      User: Yes, please. The molecule should {skin_reaction#not &NULL}be {skin_reaction__names__gerund}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {skin_reaction#not &NULL}{skin_reaction__names__gerund}: {SMILES#}
     - |-
       User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
-      User: Yes, the molecule should {skin_reaction#not &NULL}be {skin_reaction__names__adjective}.
-      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {skin_reaction#not &NULL}{skin_reaction__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {skin_reaction__names__adjective}:<EOI> {skin_reaction#yes&no}
+      User: Yes, the molecule should {skin_reaction#not &NULL}be {skin_reaction__names__gerund}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {skin_reaction#not &NULL}{skin_reaction__names__gerund}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} {skin_reaction__names__gerund}:<EOI> {skin_reaction#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
-      Description: A molecule that is {skin_reaction__names__adjective}.
+      Description: A molecule that is {skin_reaction__names__gerund}.
       {#Molecule |!}{SMILES__description}: {SMILES#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result:<EOI> {skin_reaction#False&True}
     - |-
       Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that is {skin_reaction__names__adjective}.
+      Description: A molecule that is {skin_reaction__names__gerund}.
       Result:<EOI> {SMILES#}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {skin_reaction__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {skin_reaction__names__gerund}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {skin_reaction%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {skin_reaction__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {skin_reaction__names__gerund}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {skin_reaction%}
       Answer:<EOI> {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which molecules are {skin_reaction#not &NULL}{skin_reaction__names__adjective}?
+      Question: Which molecules are {skin_reaction#not &NULL}{skin_reaction__names__gerund}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
       Options:
       {SMILES%skin_reaction%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which molecules are {skin_reaction#not &NULL}{skin_reaction__names__adjective}?
+      Question: Which molecules are {skin_reaction#not &NULL}{skin_reaction__names__gerund}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
       Options:
       {SMILES%skin_reaction%}
